# bin2path

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: publish.yml
bin2path/: __init__.py  animate.py  batch.py  compare.py  decode.py  encode.py  features.py  orient.py  path.py  serialize.py  validate.py  visualize.py
tests/: test_batch.py  test_compare.py  test_decode.py  test_encode.py  test_features.py  test_orient.py  test_serialize.py
